Fixed: Nav, overflow bug

--- a/assets/css/assets/backtotop.css
+++ b/assets/css/assets/backtotop.css
@@ -7,7 +7,7 @@
     border-radius: 4px;
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    right: 10%;
     transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
     opacity: 0;
     visibility: hidden;
