--- a/assets/css/assets/nav.css
+++ b/assets/css/assets/nav.css
@@ -68,3 +68,14 @@ nav.nav-w {
   background: #fff !important;
   box-shadow: 100px 2px 10px rgba(0, 0, 0, 0.1) !important;
 }
+
+.navbar {
+  padding: 0 !important;
+}
+
+@media (max-width: 1023px) {
+  .navbar-brand {
+    margin-bottom: 0rem !important;
+    margin-top: 0rem !important;
+  }
+}
